--- a/package.json
+++ b/package.json
@@ -29,25 +29,25 @@
     "prerelease": "yarn build"
   },
   "dependencies": {
-    "figures": "^3.1.0",
-    "ink": "^2.6.0",
-    "ink-multi-select": "https://github.com/ivanross/ink-multi-select.git#fix-managed-component",
+    "figures": "^3.2.0",
+    "ink": "^2.7.1",
+    "ink-multi-select": "^1.1.2",
     "ink-text-input": "^3.2.2",
     "log-symbols": "^3.0.0",
-    "meow": "^5.0.0",
-    "react": "^16.12.0",
-    "simple-git": "^1.126.0"
+    "meow": "^6.0.1",
+    "react": "^16.13.0",
+    "simple-git": "^1.132.0"
   },
   "devDependencies": {
-    "@types/jest": "^25.1.1",
+    "@types/jest": "^25.1.4",
     "@types/meow": "^5.0.0",
-    "@types/node": "^13.7.0",
-    "@types/react": "^16.9.19",
+    "@types/node": "^13.9.1",
+    "@types/react": "^16.9.23",
     "ink-testing-library": "^1.0.2",
     "jest": "^25.1.0",
-    "np": "^5.2.1",
-    "ts-jest": "^25.1.0",
-    "typescript": "^3.7.5"
+    "np": "^6.2.0",
+    "ts-jest": "^25.2.1",
+    "typescript": "^3.8.3"
   },
   "jest": {
     "roots": [
